--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -28,14 +28,6 @@
             android:layout_height="match_parent"
             tools:ignore="UselessParent">
 
-
-            <ImageView
-                android:id="@+id/iv_add_back"
-                android:layout_width="55dp"
-                android:layout_height="67dp"
-                android:background="#99d0c8"
-                app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -152,21 +144,29 @@
                     android:textColor="#0c0c0c"
                     tools:ignore="DuplicateIds" />
 
-                <EditText
-                    android:id="@+id/et_add_pos_neg"
-                    android:layout_width="250dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="50sp"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginEnd="100dp"
-                    android:layout_marginRight="100dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/et_user_pwd"
-                    android:ems="10"
-                    android:textColor="#9a9a9a"
-                    android:textColorHint="#9a9a9a"
-                    android:hint=" Positive / Negative "
-                    android:inputType="textPersonName" />
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rad_add_pos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="50sp"
+                        android:layout_marginTop="10sp"
+                        android:text="Positive"
+
+                        android:textSize="20sp" />
+                    <RadioButton
+                        android:id="@+id/rad_add_neg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginTop="10sp"
+                        android:text="Negative"
+                        android:textSize="20sp"/>
+                </RadioGroup>
 
                 <Button
                     android:id="@+id/bt_add_submit"
