--- a/app/src/main/res/layout/activity_admin_state.xml
+++ b/app/src/main/res/layout/activity_admin_state.xml
@@ -45,7 +45,7 @@
                 android:layout_marginTop="20dp"
                 android:text="Select State"
                 android:textAlignment="center"
-                android:textColor="#ffffff"
+                android:textColor="#0c0c0c"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
