--- a/app/src/main/res/layout/activity_admin_update_cases.xml
+++ b/app/src/main/res/layout/activity_admin_update_cases.xml
@@ -43,14 +43,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
-                    android:text="State Name :"
+                    android:text="State Name   :"
                     android:textColor="#fff"
                     android:textStyle="bold"
                     android:textSize="20dp" />
 
                 <EditText
                     android:id="@+id/et_AUC_stateName"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:layout_marginStart="40dp"
@@ -64,16 +64,16 @@
 
                 <TextView
                     android:layout_width="130dp"
-                    android:layout_height="57dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="positive cases :"
+                    android:text="Total                :"
                     android:textColor="#fff"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/et_AUC_posCases"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:layout_marginStart="40dp"
@@ -87,16 +87,16 @@
 
                 <TextView
                     android:layout_width="130dp"
-                    android:layout_height="57dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="Recoverd cases :"
+                    android:text="Recoverd       :"
                     android:textColor="#fff"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/et_AUC_recovery"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:layout_marginStart="40dp"
@@ -110,7 +110,7 @@
 
                 <TextView
                     android:layout_width="130dp"
-                    android:layout_height="58dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:text="Death :"
                     android:textColor="#fff"
@@ -119,7 +119,7 @@
 
                 <EditText
                     android:id="@+id/et_AUC_deaths"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:layout_marginStart="40dp"
